Solving the zombie-views problem by avoiding the re-adding of views when filters are used. Instead, router now fires a 'filter' event (instead of 'reset') and each view is passed a 'visible' event. A view solely decides with a single CSS .hidden class to show or hide its self.
This way each view created for a model remains in DOM until cleared and no
new view is created to take its place.

 Fixed for both standalone & requirejs versions.

See https://github.com/addyosmani/todomvc/issues/259

--- a/assets/base.css
+++ b/assets/base.css
@@ -1,4 +1,5 @@
 html,
+html,
 body {
 	margin: 0;
 	padding: 0;
@@ -403,4 +404,8 @@ label[for='toggle-all'] {
 	#todo-list li .toggle {
 		background: none;
 	}
+}
+
+.hidden {
+    display: none;
 }
